# transformer-llguidance.js

./: .gitignore  .npmignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: build.yml  publish.yml  test.yml
crates/llguidance-wasm/: Cargo.toml
crates/llguidance-wasm/src/: lib.rs
scripts/: create-env-shim.cjs
src/: index.ts  parser.ts  processor.ts  tokenizer-bridge.ts  types.ts  wasm.d.ts
tests/: integration.test.ts  parser.test.ts  processor.test.ts  tokenizer-bridge.test.ts
