[package]
name = "llguidance-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for llguidance structured output"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
# Enable wasm feature for WASM-compatible Instant
llguidance = { git = "https://github.com/guidance-ai/llguidance", features = ["wasm"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = { version = "0.1", optional = true }
# Required for WASM target - provides randomness via JavaScript
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
